Height Attr Fix
Changed from height style to height attribute.

--- a/wunderground/copyright.html
+++ b/wunderground/copyright.html
@@ -11,6 +11,6 @@
 
 </div>
 <div class="wu-sponsor">
-<a href="http://kmb101.com/"><img src="http://sunad.com/ads/permalink/weather-sponsor.jpg" style="float:right; height:80px;"></a>
+<a href="http://kmb101.com/"><img src="http://sunad.com/ads/permalink/weather-sponsor.jpg" height="80" style="float:right;"></a>
 Weather sponsored by <br><a href="http://kmb101.com/">Sun Somewhere<br>Real Estate Station LLC</a><br>90 W 100 N, Price<br><a href="tel:+1-435-637-5397">435-637-KEYS</a>
 </div>
